plugins {
    id 'java'
    id 'application'
}

group = 'com.example'
version = '1.0.0'
sourceCompatibility = '11'
targetCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.gitlab4j:gitlab4j-api:6.0.0-rc.5'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
}

application {
    mainClass = 'com.example.gitlabcommits.Main'
}

// Standard jar — classes only, no dependencies
jar {
    manifest {
        attributes 'Main-Class': 'com.example.gitlabcommits.Main'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// Fat jar — everything bundled, runnable with: java -jar build/libs/gitlab-get-commits-1.0.0-all.jar
tasks.register('fatJar', Jar) {
    group       = 'build'
    description = 'Assembles a runnable jar with all runtime dependencies included'

    archiveClassifier = 'all'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    manifest {
        attributes 'Main-Class': 'com.example.gitlabcommits.Main'
    }

    from sourceSets.main.output
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'
    exclude 'META-INF/versions/**'
    exclude 'module-info.class'
}

assemble.dependsOn fatJar
